# evolution

./: .gitignore  agent.py  argparser.py  best.pickle  custom_cnn.py  deap_train.py  defaults.yaml  env.py  evotorch_main.py  game.py  grid_search.py  main.py  neat-checkpoint-0  neat-checkpoint-1  neat-checkpoint-10  neat-checkpoint-11  neat-checkpoint-12  neat-checkpoint-13  neat-checkpoint-14  neat-checkpoint-15  neat-checkpoint-16  neat-checkpoint-17  neat-checkpoint-18  neat-checkpoint-19  neat-checkpoint-2  neat-checkpoint-20  neat-checkpoint-21  neat-checkpoint-22  neat-checkpoint-23  neat-checkpoint-24  neat-checkpoint-25  neat-checkpoint-26  neat-checkpoint-27  neat-checkpoint-28  neat-checkpoint-29  neat-checkpoint-3  neat-checkpoint-30  neat-checkpoint-31  neat-checkpoint-32  neat-checkpoint-33  (+36 more)
env/: food.py  game.py  gym_env.py  player.py  pz_env.py  simple.py
evolution_env/: food.py  gym_env.py  player.py  pz_env.py  simple.py
game/: food.py  game.py  game_object.py  player.py
gym_env/: evolution_env.py  food.py  game_object.py  player.py  pz_env.py  simple.py
mlruns/0/: meta.yaml
mlruns/193688923574632878/: meta.yaml
mlruns/587074504553567665/: meta.yaml
mlruns/811154812699529538/: meta.yaml
model/: constants.py  evaluate.py  test.py  train.py
models/: best.pickle
pz_test/: main.py
training/10reward4food/: basic-variant-state-2024-05-20_23-40-03.json  experiment_state-2024-05-20_23-40-03.json
training/2pred/: basic-variant-state-2024-08-11_15-57-20.json  basic-variant-state-2024-08-11_16-33-53.json  (+2 more)
(+6098 files in other folders)
